--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,9 @@ dependencies:
   flutter_local_notifications: ^15.1.0+1
   shared_preferences: ^2.2.0
   firebase_database: ^10.4.0
+  firebase_storage: ^11.2.8
+  image_picker: ^0.8.4+4
+
 
 dev_dependencies:
   flutter_test:
